--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "hello-world-ci",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "jest"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.0.0"
+  },
+  "scripts": {
+    "test": "./node_modules/.bin/jest"
   }
 }
